compiler/toc_hir_lowering/src/snapshots/toc_hir_lowering__test__expression_order.snap
---
source: compiler/toc_hir_lowering/src/test.rs
expression: "_ := 1 + 2 * 3 + 4"

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(0)
    Module@(FileId(1), 0..18): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..18): []
        Assign@(FileId(1), 0..18): None
          Name@(FileId(1), 0..1): "_"@(FileId(1), 0..1), undeclared
          Binary@(FileId(1), 5..18): Add
            Binary@(FileId(1), 5..14): Add
              Literal@(FileId(1), 5..6): Integer(1)
              Binary@(FileId(1), 9..14): Mul
                Literal@(FileId(1), 9..10): Integer(2)
                Literal@(FileId(1), 13..14): Integer(3)
            Literal@(FileId(1), 17..18): Integer(4)

