compiler/toc_hir_lowering/src/snapshots/toc_hir_lowering__test__lower_binary_expr-2.snap
---
source: compiler/toc_hir_lowering/src/test.rs
expression: "a := () + "

---
database:
stmt:
Idx::<Stmt>(0) (0..10): Assign(Assign { lhs: Idx::<Expr>(0), op: None, rhs: Idx::<Expr>(4) })

expr:
Idx::<Expr>(0) (0..2): Name(Name(UseId(DefId(0), 0)))
Idx::<Expr>(1) (0..0): Missing
Idx::<Expr>(2) (5..8): Paren(Paren { expr: Idx::<Expr>(1) })
Idx::<Expr>(3) (0..0): Missing
Idx::<Expr>(4) (5..10): Binary(Binary { lhs: Idx::<Expr>(2), op: Spanned(Add, 8..9), rhs: Idx::<Expr>(3) })

ty:

root stmts:
[Idx::<Stmt>(0)]
symtab:
DefId(0): (0..1, Symbol { name: "a", kind: Undeclared, is_pervasive: false, def_id: DefId(0), next_use: 1 })
UseId(DefId(0), 0): 0..1

