compiler/toc_hir_lowering/src/snapshots/toc_hir_lowering__test__lower_block_stmt_multiple.snap
---
source: compiler/toc_hir_lowering/src/test.rs
expression: "begin _ := a _ := b _ := c end"

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(0)
    Module@(FileId(1), 0..30): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..30): []
        Block@(FileId(1), 0..30): Normal
          Assign@(FileId(1), 6..12): None
            Name@(FileId(1), 6..7): "_"@(FileId(1), 6..7), undeclared
            Name@(FileId(1), 11..12): "a"@(FileId(1), 11..12), undeclared
          Assign@(FileId(1), 13..19): None
            Name@(FileId(1), 13..14): "_"@(FileId(1), 6..7), undeclared
            Name@(FileId(1), 18..19): "b"@(FileId(1), 18..19), undeclared
          Assign@(FileId(1), 20..26): None
            Name@(FileId(1), 20..21): "_"@(FileId(1), 6..7), undeclared
            Name@(FileId(1), 25..26): "c"@(FileId(1), 25..26), undeclared

