compiler/toc_hir_lowering/src/snapshots/toc_hir_lowering__test__lower_char_literal-2.snap
---
source: compiler/toc_hir_lowering/src/test.rs
expression: "a := 'abcd "

---
database:
stmt:
Idx::<Stmt>(0) (Span { file: None, range: 0..11 }): Assign(Assign { lhs: Idx::<Expr>(0), op: Spanned(None, Span { file: None, range: 2..4 }), rhs: Idx::<Expr>(1) })

expr:
Idx::<Expr>(0) (Span { file: None, range: 0..1 }): Name(Name(UseId(DefId(0), 0)))
Idx::<Expr>(1) (Span { file: None, range: 5..11 }): Literal(CharSeq("abcd "))

ty:

root stmts:
[Idx::<Stmt>(0)]
symtab:
DefId(0): (Span { file: None, range: 0..1 }, Symbol { name: "a", kind: Undeclared, is_pervasive: false, def_id: DefId(0), next_use: 1 })
UseId(DefId(0), 0): Span { file: None, range: 0..1 }
error at 5..11: invalid char literal: missing terminator character

